# tree-sitter-flex

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  log.html  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-flex.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_flex/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFlex/: flex.h
bindings/swift/TreeSitterFlexTests/: TreeSitterFlexTests.swift
examples/: min.l  pl0.l
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: doc.txt
